--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -14,5 +14,6 @@ input{
     input{
         width: 80vw;
         font-size: 0.9rem;
+        font-family: 'Times New Roman', Times, serif;
     }
 }
